fix: adjust z-index in cover

--- a/src/components/atoms/Cross/index.scss
+++ b/src/components/atoms/Cross/index.scss
@@ -2,6 +2,7 @@
   width: 26px;
   height: 26px;
   position: relative;
+  cursor: pointer;
   span {
     display: block;
     background-color: var(--black);
