--- a/src/components/organisms/Cover/index.scss
+++ b/src/components/organisms/Cover/index.scss
@@ -8,7 +8,7 @@
   .cover-poster {
     width: 100%;
     position: relative;
-    z-index: 2;
+    z-index: 3;
     margin-bottom: 12px;
     @media screen and (min-width: 1024px) {
       width: 88vw;
@@ -40,6 +40,9 @@
       position: absolute;
       top: 60%;
       left: 50px;
+    }
+    @media screen and (min-width: 1440px) {
+      top: 649px;
     }
     .date {
       display: flex;
@@ -134,6 +137,17 @@
     }
     @media screen and (min-width: 1024px) {
       display: none;
+    }
+  }
+  &.mask {
+    .white-circle {
+      z-index: 1;
+    }
+    .cover-circle {
+      z-index: 2;
+    }
+    .cover-poster {
+      z-index: 3;
     }
   }
 }
